[maven] Refactored MavenRepository
The design of the MavenBndRepository is layered. A MavenBndRepository uses an IMavenRepository to access the repositories. This IMavenRepository is constructed from a _local_ repository (.m2) and a set of _backing_ repositories. The purpose of the backing repositories is to abstract the source. Either a file repository or remote repository.

For unknown reasons, the backing repositories  implemented the metadata handling, making them unnecessarily complex. This wasn't a big deal because they implementations inherited from a base class. 

However, trying to properly handle the caching  problems of snapshots, it became too hairy. Although this looks like an easy problem, it interacts with the metadata caching & archive stale time & http client caching in mysterious ways. I.e. too much caching was going on.

I therefore moved the metadata methods to the MavenRepository implementation, actually simplifying things considerably. All caching is now in the MavenRepository class. I also moved some of the validation methods to the MavenRepository as well, simplifying the callers. I also unrolled the promises in the MavenRemoteRepository fetch method. This is a private method and was called locally once where there was a wait on the promise. The use of promises made it impossible to single step and verify while using more threads. So this has now become a simple method instead of promise acrobatics.

In the end the cache handling of snapshots is now a lot clearer. 

A MavenBndRepository reads the index and then fetches all files at startup or when there is an addition. Since the init must be done before the first use of the repository, it can assume there is a file present. I.e. the MavenBndRepository 'get' method never fetched content, the content was already there.

When the MavenBndRepository get method is called, it will 'find' the archive in the index. The archive is now checked to be stale via the IMavenRepo. The time for snapshots is a